Package MongoDB.Driver instalado, configuração inicial do cluster e string de Conexão

--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionString": "mongodb+srv://api:7rTByiVdVO20uhDK@cluster0.fdnff.mongodb.net/myFirstDatabase?retryWrites=true&w=majority",
+  "NomeBanco": "coronavirus"
 }
+
